fix: resolve flicker issue when switching to dark mode by controlling page visibility

--- a/CS50W/Project 0 - Search/assets/css/advanced_search.css
+++ b/CS50W/Project 0 - Search/assets/css/advanced_search.css
@@ -4,6 +4,7 @@ html {
     height: 100%;
 }
 body {
+    visibility: hidden;
     font-family: Arial, sans-serif;
     height: 100%;
     background-color: var(--background-color);
