--- a/CS50W/Project 0 - Search/assets/css/search.css
+++ b/CS50W/Project 0 - Search/assets/css/search.css
@@ -5,6 +5,7 @@ html {
 }
 
 body {
+    visibility: hidden;
     background-color: var(--background-color);
     color: var(--text-color);
     height: 100%;
